# projeto_airflow

./: README.md  exemplo_00.py  exemplo_01.py  main.py  pyproject.toml
.astro/: config.yaml
dags/: main.py  minha_quarta_dag.py  minha_quinta_dag.py  minha_setima_dag.py  minha_terceira_dag.py
frontend/: exemplo_04.py
