[project]
name = "projeto-airflow"
version = "0.1.0"
description = ""
authors = [
    {name = "ROGERIO RODRIGUES",email = "rogerio-rodrigues@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
